--- a/firewall.yaml
+++ b/firewall.yaml
@@ -7,8 +7,16 @@ rules:
   cidr_blocks:
   - 0.0.0.0/0
   description: Allow incoming ICMP (ping)
-- name: ssh_rule
+- name: ssh_ingress
   type: ingress
+  from_port: 22
+  to_port: 22
+  protocol: tcp
+  cidr_blocks:
+  - 0.0.0.0/0
+  description: Allow incoming SSH access
+- name: ssh_egress
+  type: egress
   from_port: 22
   to_port: 22
   protocol: tcp
